@@ -1,5 +1,6 @@
 
 Version 0.7	- xx July 2001
+  * checker -h prints defaults after processing .pycheckrc file
   * Add config option to disable unused imports from __init__.py
   * Add warning for variable used before being set
   * Improve format string checks/warnings
